[tool.poetry]
name = "pyproj-perf"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
packages = [{include = "pyproj_perf"}]

[tool.poetry.dependencies]
python = "^3.9"
censusdis = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
